# 3dgs_provable_coresets

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REPRODUCING.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml
gs_coresets/: __init__.py  cli.py
gs_coresets/modules/: all_coresets.py  classify_scene.py  coreset.py  finetune.py  metrics.py  render.py  sens_cams.py  sensitivity.py
gs_coresets/utils/: args_utils.py  camera_generator.py  camera_utils.py  classify_scene_utils.py  coreset_utils.py  debug_utils.py  default_paths.py  extract_cameras.py  gaussian_utils.py  io_utils.py  log_utils.py  metrics_utils.py  renderer_utils.py  scene_utils.py  stats_utils.py  types_devices_utils.py  visual_utils.py
